<resources>
    <string name="app_name">MobileAssignment2</string>
    <string name="long_input">Enter Longitude</string>
    <string name="address_input">Enter Address</string>
    <string name="lat_input">Enter Latitude</string>
    <string name="submit">Submit</string>
    <string name="return_button">Return</string>
    <string name="search">Search</string>
    <string name="add_address">Add Address</string>
    <string name="address_header">Address</string>
    <string name="edit_address">Edit Address</string>
    <string name="lat_header">Latitude</string>
    <string name="edit_lat">Edit Latitude</string>
    <string name="long_header">Longitude</string>
    <string name="edit_long">Edit Longitude</string>
    <string name="edit_button">Edit</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_button">Delete</string>
</resources>